// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/FileUploadOverlay should match snapshot when file upload is showing with no overlay type 1`] = `
<div
  className="file-overlay hidden"
>
  <div
    className="overlay__indent"
  >
    <div
      className="overlay__circle"
    >
      <img
        alt="Files"
        className="overlay__files"
        src={null}
      />
      <span>
        <FormattedMessage
          defaultMessage="Upload Icon"
          id="generic_icons.upload"
        >
          <Component />
        </FormattedMessage>
        <FormattedMessage
          defaultMessage="Drop a file to upload it."
          id="upload_overlay.info"
        />
      </span>
      <img
        alt="Logo"
        className="overlay__logo"
        src={null}
        width="100"
      />
    </div>
  </div>
</div>
`;

exports[`components/FileUploadOverlay should match snapshot when file upload is showing with overlay type of center 1`] = `
<div
  className="file-overlay hidden center-file-overlay"
>
  <div
    className="overlay__indent"
  >
    <div
      className="overlay__circle"
    >
      <img
        alt="Files"
        className="overlay__files"
        src={null}
      />
      <span>
        <FormattedMessage
          defaultMessage="Upload Icon"
          id="generic_icons.upload"
        >
          <Component />
        </FormattedMessage>
        <FormattedMessage
          defaultMessage="Drop a file to upload it."
          id="upload_overlay.info"
        />
      </span>
      <img
        alt="Logo"
        className="overlay__logo"
        src={null}
        width="100"
      />
    </div>
  </div>
</div>
`;

exports[`components/FileUploadOverlay should match snapshot when file upload is showing with overlay type of right 1`] = `
<div
  className="file-overlay hidden right-file-overlay"
>
  <div
    className="overlay__indent"
  >
    <div
      className="overlay__circle"
    >
      <img
        alt="Files"
        className="overlay__files"
        src={null}
      />
      <span>
        <FormattedMessage
          defaultMessage="Upload Icon"
          id="generic_icons.upload"
        >
          <Component />
        </FormattedMessage>
        <FormattedMessage
          defaultMessage="Drop a file to upload it."
          id="upload_overlay.info"
        />
      </span>
      <img
        alt="Logo"
        className="overlay__logo"
        src={null}
        width="100"
      />
    </div>
  </div>
</div>
`;
